--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.7.2"
-  }
+  },
+  "scripts": {
+    "dev": "node dev-server.js",
+    "start": "react-scripts start",
+    "build": "webpack --mode production"
+  
+}
 }
